# FileChecker

./: finder_colors.py  main.py  notifications.py  notify_popup.py  pyproject.toml
