[tool.poetry]
name = "filechecker"
version = "0.1.0"
description = "check an osx volume for green labeled files"
authors = ["edg <glutenfreepy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
xattr = "^0.9.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
